// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar DOM snapshot tests DynamicIconAvatar matches snapshot 1`] = `
<div
  className="sc-bczRLJ cesvjd"
  shape="round"
  size="lg"
>
  <svg
    fill="none"
    height={24}
    viewBox="0 0 24 24"
    width={24}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M15.707 13.879a1 1 0 0 1 1.415 1.414l-4.415 4.414a1 1 0 0 1-1.414 0l-4.414-4.414a1 1 0 1 1 1.414-1.414L11 16.586V5a1 1 0 1 1 2 0v11.586l2.707-2.707Z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`Avatar DOM snapshot tests IconAvatar matches snapshot 1`] = `
<div
  className="sc-bczRLJ cesvjd"
  shape="round"
  size="lg"
>
  <svg
    fill="none"
    height={24}
    viewBox="0 0 24 24"
    width={24}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M15.707 13.879a1 1 0 0 1 1.415 1.414l-4.415 4.414a1 1 0 0 1-1.414 0l-4.414-4.414a1 1 0 1 1 1.414-1.414L11 16.586V5a1 1 0 1 1 2 0v11.586l2.707-2.707Z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`Avatar DOM snapshot tests ImageAvatar matches snapshot 1`] = `
<div
  className="sc-bczRLJ ivqPzI"
  shape="round"
  size="lg"
/>
`;

exports[`Avatar DOM snapshot tests UserAvatar matches snapshot 1`] = `
<div
  className="sc-bczRLJ kdoqip"
  shape="round"
  size="lg"
/>
`;
